# super-metroid

./: .gitignore  Cargo.toml  README.md
lib-samus/: Cargo.toml
lib-samus/src/: controller_input.rs  lib.rs  pose.rs  state_machine.rs
proc-samus/: Cargo.toml
proc-samus/src/: lib.rs  main.rs  poses_list.rs
sm/: Cargo.toml
sm/src/: enemy.rs  frame_map.rs  lib.rs  pose.rs  samus.rs  snes.rs  sprite.rs  util.rs
snes-bitplanes/: Cargo.toml  README.md
snes-bitplanes/src/: bitplanes_4bpp.rs  lib.rs  tile.rs
src/: bitplanes.rs  centered_canvas.rs  enemy.rs  frame_map.rs  main.rs  samus.rs  snes.rs  sprite.rs  util.rs  write_gif.rs
static_viewer/: Cargo.toml
static_viewer/src/: main.rs  state_machine.rs
viewer/: Cargo.toml
viewer/src/: main.rs  write_gif.rs
web-viewer/: Cargo.toml  index.html
web-viewer/src/: lib.rs
